# sftp-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
